<resources>
    <string name="app_name">DisneyTripPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_txt">Email</string>
    <string name="pass_txt">Password</string>
    <string name="login">Login</string>
    <string name="create_new_acct">Create Account</string>
    <string name="fname_txt">First Name</string>
    <string name="lname_txt">Last Name</string>
    <string name="name_txt">Name</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="trip_name">Trip Name *</string>
    <string name="start_date">Start Date *</string>
    <string name="end_date">End Date *</string>
    <string name="description">Description (optional)</string>
    <string name="hint_date">dd/mm/yyyy</string>
    <string name="select_dates">Select Trip Dates</string>
    <string name="date_dash">-</string>
    <string name="my_trips">My Trips</string>
    <string name="todays_plans">Today\'s Plans</string>
    <string name="wait_times">Wait Times</string>
    <string name="park_hours">Park Hours</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_character">Change Character</string>
    <string name="parks">Parks</string>
    <string name="back">Back</string>
    <string name="no_trips_yet">No trips yet!</string>
    <string name="plan_trip_string">You have not created any trips yet. Once you do, they will appear here.</string>
    <string name="create_my_first_trip">Create my first trip</string>
    <string name="my_favorites">My Favorites</string>
    <string name="park_hrs_and_info">Park Hours</string>
    <string name="magic_kingdom">Magic Kingdom</string>
    <string name="animal_kingdom">Animal Kingdom</string>
    <string name="epcot">Epcot</string>
    <string name="hollywood_studios">Disney Hollywood Studios</string>
    <string name="today">Today</string>
    <string name="hours">Hours</string>
    <string-array name="parks">
        <item>Magic Kingdom</item>
        <item>Epcot</item>
        <item>Animal Kingdom</item>
        <item>Disney Hollywood Studios</item>
    </string-array>
    <string name="hello_txt">Hello,</string>
    <string name="create_trip_txt">New Trip</string>
    <string name="continue_txt">Continue</string>
</resources>