<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_purple_gradient"
    tools:context=".auth.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/pass_txt"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:fontFamily="@font/palanquin"
                app:layout_constraintEnd_toEndOf="@+id/editTextLoginEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

            <EditText
                android:id="@+id/editTextLoginEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/palanquin"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/gradient_button"
                android:fontFamily="@font/poppins"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

            <TextView
                android:id="@+id/textViewNewAcct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="45dp"
                android:fontFamily="@font/poppins"
                android:text="@string/create_new_acct"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>