<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTripFragment">

    <TextView
        android:id="@+id/textViewCancelNewTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSaveNewTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNewTripName"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinnerResortOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewTripName"
        app:layout_constraintStart_toStartOf="@+id/editTextNewTripName"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewTripName"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageViewCalendar"
        android:layout_width="39dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/calendar"
        app:layout_constraintStart_toStartOf="@+id/textViewDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateLabel" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
        app:layout_constraintStart_toEndOf="@+id/imageViewCalendar"
        app:layout_constraintTop_toTopOf="@+id/imageViewCalendar" />

    <TextView
        android:id="@+id/textViewDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/select_dates"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/spinnerResortOptions"
        app:layout_constraintTop_toBottomOf="@+id/spinnerResortOptions" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/trip_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editTextNewTripName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCancelNewTrip" />

    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStartDate"
        app:layout_constraintStart_toEndOf="@+id/textViewStartDate"
        app:layout_constraintTop_toTopOf="@+id/textViewStartDate" />
</androidx.constraintlayout.widget.ConstraintLayout>