<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/buttonHomeFromAccountView"
        android:layout_width="34dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHomeFromAccountView">

        <ImageView
            android:id="@+id/imageViewAccountCharacter"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="TODO"
            android:src="@drawable/pascal" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewChangeCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/change_character"
        android:textColor="@color/blue_400"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/name_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChangeCharacter" />

    <TextView
        android:id="@+id/textViewAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageViewEditAccountName"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/edit_icon"
        android:tint="@color/blue_400"
        app:layout_constraintStart_toEndOf="@+id/textViewAccountName"
        app:layout_constraintTop_toTopOf="@+id/textViewAccountName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email_txt"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccountName" />

    <TextView
        android:id="@+id/textViewAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageViewEditAccountEmail"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/edit_icon"
        android:tint="@color/blue_400"
        app:layout_constraintStart_toEndOf="@+id/textViewAccountEmail"
        app:layout_constraintTop_toTopOf="@+id/textViewAccountEmail" />

    <TextView
        android:id="@+id/textViewHomeFromAccountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHomeFromAccountView"
        app:layout_constraintStart_toEndOf="@+id/buttonHomeFromAccountView"
        app:layout_constraintTop_toTopOf="@+id/buttonHomeFromAccountView" />

</androidx.constraintlayout.widget.ConstraintLayout>