<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTripFragment">

    <TextView
        android:id="@+id/textViewCancelNewTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSaveNewTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTripName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/trip_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCancelNewTrip" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/trip_dates"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectTripDates"
        app:layout_constraintStart_toEndOf="@+id/buttonSelectTripDates"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectTripDates" />

    <Spinner
        android:id="@+id/resortSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTripName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTripName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTripName" />

    <TextView
        android:id="@+id/textViewTripDates"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/buttonSelectTripDates"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:minHeight="40dp"
        android:src="@drawable/calendar"
        app:layout_constraintStart_toStartOf="@+id/resortSpinner"
        app:layout_constraintTop_toBottomOf="@+id/resortSpinner" />


</androidx.constraintlayout.widget.ConstraintLayout>